@@ -32,6 +32,7 @@ class QGaimImageUtils
 		static QImage &greyImage(QImage &image);
 		static QImage &desaturate(QImage &image, float value);
 		static QImage &saturate(QImage &image, float value);
+		static QPixmap &greyPixmap(QPixmap &pixmap);
 		static QPixmap &saturate(QPixmap &pixmap, float value);
 
 		static void blendOnLower(int x, int y, const QImage &upper,
